MP-2008-08-18-0: Cleanup:    Fixed broken test for IZ 2418
                 Review:     DG

DG-2008-08-14-0: Cleanup:    On Solaris a shared lib path is set from sgeexecd
                             script (is different to current branch). Therefore 
                             the job_environment test for 6.0 was adapted.
                 Review:     CR
 
CR-2008-08-14-0: Cleanup:    Fixed architecture resolving for product testing  
                             in procedure resolve_build_arch_installed_libs(). 
                 Review:     DG

CR-2008-08-13-0: Enhancem.:  Added ts_log_fine output to commlib test
                             checktree/performance/commlib/check.60.exp
                 Review:     DG

MB-2008-08-13-1: Cleanup:    Fixed changelog entry
MB-2008-08-13-0: Bugfix:     Unsecured hedeby system installation fails
                 Issue :     235
                 Review:     MG

DG-2008-08-12-0: Cleanup:    Fixed qmaster installation for RPC BDB. 
                             Does not delete cell dir anymore.
                 Review:     CR 

DG-2008-08-12-0: Cleanup:    Fixed arch cache for resolve_arch(). 
                             Missing output when shadow daemon is not 
                             configured properly. 
                 Review:     CR

MG-2008-08-11-0: Bugfix:     Testsuite test for SDM issue 551
                 Review:     CR

CR-2008-08-07-0: Bugfix:     Fixed minor testsuite issues
                 Review:     JG

AP-2008-08-07-0: Bugfix:     Testsuite configuration - can't change the source dir
                 Issue:      211
                 Review:     ZG

JG-2008-08-05-0: Enhancem.:  Allow running testsuite with V61AR* branch.
                 Bugfix:     Fixed system_tests/qmaster/complex.
                 Review:     EB

ZG-2008-08-05-0: Bugfix:     Adding missin variable declaration in
                             config_database/db_config_add_newdatabase()
                 Review:     AP
